Transcode from any to any fails using the convert/save GUI method. dump raw input is ok. Tested against win32 1.1.0-git-20091222-1831, so far tried back to nov 7 nightly but that still has the problem.
Edited
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
[0x3d2e2f4] main input debug: Buffering 83%[0x3d2e2f4] main input debug: Buffering 91%[0x3d2e2f4] main input debug: Buffering 100%[0x3d2e2f4] main input debug: Stream buffering done (325 ms in 2 ms)[0x32a58ac] main stream output debug: adding a new sout input (sout_input:0x3e32e08)[New thread 2284.0x24d0][0x3e4f51c] main decoder debug: using decoder module "mpeg_audio"[0x3e4f51c] main decoder debug: TIMER module_need() : 4065.000 ms - Total 4065.000 ms / 1 intvls (Avg 4065.000 ms)[0x3e61f8c] main encoder debug: looking for encoder module: 10 candidates[0x3e61f8c] avcodec encoder debug: libavcodec initialized (interface 0x342a00)[0x3e61f8c] avcodec encoder debug: found encoder MPEG AAC Audio[0x3e61f8c] main encoder debug: using encoder module "avcodec"[0x3e61f8c] main encoder debug: TIMER module_need() : 4068.000 ms - Total 4068.000 ms / 1 intvls (Avg 4068.000 ms)[0x32ab3bc] stream_out_transcode stream out debug: Looking for filter (mpga->s16l, channels 2->2, rate 48000->44100)[0x3ee544c] main filter debug: looking for audio filter module: 16 candidates[0x3ee544c] mpgatofixed32 filter debug: mpga->fl32, bits per sample: 0[0x3ee544c] main filter debug: using audio filter module "mpgatofixed32"[0x3ee544c] main filter debug: TIMER module_need() : 777.000 ms - Total 777.000 ms / 1 intvls (Avg 777.000 ms)[0x32ab3bc] main stream out debug: Filter 'mpgatofixed32' (0x3ee544c) appended to chain[0x3e63dac] main filter debug: looking for audio filter module: 16 candidates[0x3e63dac] main filter debug: looking for audio filter module: 16 candidates[0x3e63dac] bandlimited_resampler filter debug: fl32/48000KHz/2->fl32/44100KHz/2[0x3e63dac] main filter debug: using audio filter module "bandlimited_resampler"[0x3e63dac] main filter debug: TIMER module_need() : 384.000 ms - Total 384.000 ms / 1 intvls (Avg 384.000 ms)[0x32ab3bc] main stream out debug: Filter 'bandlimited_resampler' (0x3e63dac) appended to chain[0x3e640d4] main filter debug: looking for audio filter module: 16 candidates[0x3e640d4] audio_format filter debug: fl32->s16l, bits per sample: 32->16[0x3e640d4] main filter debug: using audio filter module "audio_format"[0x3e640d4] main filter debug: TIMER module_need() : 1987.000 ms - Total 1987.000 ms / 1 intvls (Avg 1987.000 ms)[0x32ab3bc] main stream out debug: Filter 'audio_format' (0x3e640d4) appended to chain[0x32ab3bc] stream_out_transcode stream out debug: Got complete audio filter chain[0x32ab46c] stream_out_duplicate stream out debug: duplicated a new stream codec=mp4a (es=1 group=0)[0x33da434] main mux debug: adding a new input[0x33da434] mux_ts mux debug: adding input codec=mp4a pid=68[0x33da434] mux_ts mux debug: new PCR PID is 68[0x32ab46c] stream_out_duplicate stream out debug: - added for output 0[0x32ab3bc] stream_out_transcode stream out debug: creating video transcoding from fcc=`mp4v' to fcc=`h264'[0x3eeaff4] main decoder debug: looking for decoder module: 34 candidates[0x3eeaff4] avcodec decoder debug: libavcodec already initialized[0x3eeaff4] avcodec decoder debug: using direct rendering[0x3eeaff4] avcodec decoder debug: ffmpeg codec (MPEG-4 Video) started[0x3eeaff4] main decoder debug: using decoder module "avcodec"[0x3eeaff4] main decoder debug: TIMER module_need() : 790.000 ms - Total 790.000 ms / 1 intvls (Avg 790.000 ms)[0x3eeb32c] main encoder debug: looking for encoder module: 10 candidates[0x3eeb32c] x264 encoder debug: version x264 0.76.X[0x3eeb32c] x264 encoder debug: initializing pthread-win32x264 [info]: using threads=3x264 [info]: using cpu capabilities: MMX2 SSE2Fast SSSE3 FastShuffle SSE4.1 Cache64x264 [info]: profile Main, level 5.1[0x3eeb32c] main encoder debug: using encoder module "x264"[0x3eeb32c] main encoder debug: TIMER module_need() : 1113.000 ms - Total 1113.000 ms / 1 intvls (Avg 1113.000 ms)[0x3eeb32c] x264 encoder debug: pthread-win32 deinitialized[0x3eeb32c] main encoder debug: removing module "x264"[0x3d2e2f4] main input debug: Decoder buffering done in 13307 ms[0x32ab3bc] stream_out_transcode stream out debug: decoder aspect is 1.772727:1[0x32ab3bc] stream_out_transcode stream out debug: source pixel aspect is 1.000000:1[0x32ab3bc] stream_out_transcode stream out debug: scaled pixel aspect is 1.000000:1[0x32ab3bc] stream_out_transcode stream out debug: source 624x352, destination 624x352[0x32ab3bc] stream_out_transcode stream out debug: encoder aspect is 624:352[0x32ab3bc] stream_out_transcode stream out debug: destination (after video filters) 624x352[0x3eeb32c] main encoder debug: looking for encoder module: 10 candidates[0x3eeb32c] x264 encoder debug: version x264 0.76.X[0x3eeb32c] x264 encoder debug: initializing pthread-win32x264 [info]: using threads=3x264 [info]: using SAR=1/1x264 [info]: using cpu capabilities: MMX2 SSE2Fast SSSE3 FastShuffle SSE4.1 Cache64x264 [warning]: VBV maxrate specified, but no bufsize.x264 [info]: profile Main, level 5.1[0x3eeb32c] main encoder debug: using encoder module "x264"[0x3eeb32c] main encoder debug: TIMER module_need() : 63.000 ms - Total 63.000 ms / 1 intvls (Avg 63.000 ms)[0x32ab46c] stream_out_duplicate stream out debug: duplicated a new stream codec=h264 (es=0 group=0)[0x33da434] main mux debug: adding a new input[0x33da434] mux_ts mux debug: adding input codec=h264 pid=69[0x33da434] mux_ts mux debug: new PCR PID is 69[0x32ab46c] stream_out_duplicate stream out debug: - added for output 0[0x3e4f51c] mpeg_audio decoder debug: MPGA channels:2 samplerate:48000 bitrate:128
Program received signal SIGSEGV, Segmentation fault.[Switching to thread 8144.0x13c]0x739f1399 in fast_memcpy (to=0xb8d4880, from=0x41b7fd0, len=16) at ../../../vlc/modules/mmxext/../mmx/fastmemcpy.h:342342 __asm__ __volatile__ ((gdb) warning: Lowest section in C:\Windows\system32\normaliz.dll is .text at 00401000warning: Lowest section in C:\Windows\System32\NlsLexicons000c.dll is .rsrc at 00401000warning: Lowest section in C:\Windows\System32\NlsLexicons0009.dll is .rsrc at 00401000BFD: C:\Windows\system32\WMVCORE.DLL: Warning: Ignoring section flag IMAGE_SCN_MEM_NOT_PAGED in section .relocBFD: C:\Windows\system32\WMVCORE.DLL: Warning: Ignoring section flag IMAGE_SCN_MEM_NOT_PAGED in section .relocbt[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x739f1399 in fast_memcpy (to=0xb8d4880, from=0x41b7fd0, len=16) at ../../../vlc/modules/mmxext/../mmx/fastmemcpy.h:342[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x6a5c232b in vlc_memcpy (tgt=0xb8cf3d0, src=0x41b2b20, n=1116288) at ../../vlc/src/misc/cpu.c:405[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x5d2d1950 in Resample (p_filter=0x3f5671c, p_in_buf=0x41b2ac0) at ../../../../vlc/modules/audio_filter/resampler/bandlimited.c:189[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x6a5d5708 in filter_chain_AudioFilter (p_chain=0x40e9ff0, p_block=0x41b2ac0) at ../../vlc/src/misc/filter_chain.c:241[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x5f5d5b5a in transcode_audio_process (p_stream=0x2503ac4, id=0x4108938, in=0x24f9970, out=0xb9dfda8) at ../../../../vlc/modules/stream_out/transcode/audio.c:380[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x5f5d3e80 in Send (p_stream=0x2503ac4, id=0x4108938, p_buffer=0x24f9970) at ../../../../vlc/modules/stream_out/transcode/transcode.c:695[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x6a5dfca3 in sout_InputSendBuffer (p_input=0x40bfa08, p_buffer=0x24f9970) at ../../vlc/src/stream_output/stream_output.c:280[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x6a56c468 in DecoderPlaySout (p_dec=0x250d154, p_sout_block=0x24f9970, b_telx=false) at ../../vlc/src/input/decoder.c:1649[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x6a56c7ce in DecoderProcessSout (p_dec=0x250d154, p_block=0x4125d38) at ../../vlc/src/input/decoder.c:1768[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x6a56ce07 in DecoderProcess (p_dec=0x250d154, p_block=0x4125d38) at ../../vlc/src/input/decoder.c:1967[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x6a56a938 in DecoderThread (p_this=0x250d154) at ../../vlc/src/input/decoder.c:885[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x6a5c002a in thread_entry (data=0x3fe1828) at ../../vlc/src/misc/threads.c:58[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x6a5d8dce in vlc_entry (p=0x3fe1668) at ../../vlc/src/win32/thread.c:495[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x77cb9dc9 in msvcrt!__RTtypeid () from C:\Windows\system32\msvcrt.dll[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x03fe1668 in ?? ()[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x3ccc18ea in ?? ()[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x00000000 in ?? ()
Rémi Denis-Courmontchanged title from convert/save crashes on 1.1 to Regression: resampling crashes on 1.1
changed title from convert/save crashes on 1.1 to Regression: resampling crashes on 1.1
commit cc85d3ae
Author: Rémi Denis-Courmont remi@remlab.net
Date: Sun Jan 17 13:32:57 2010 +0200
bandlimited: avoid large stack allocation (refs [#3199](https://code.videolan.org/videolan/vlc/-/issues/3199))In most cases, there is enough space for the 2 old samples in theinput buffer head room. In other cases, we anyway need to memory copythe whole buffer. So we now use block_Realloc(). This also saves us fromcopying every samples when resampling.Unfortunately, the transcode plugin seems to be feeding crap into theresampler, thus it still crashes.
I extrapolated from jb post that removing the upsampling might get this working. It does get me a little further.
The slightly simpler transcode allows the record over the streams to occur, however the bridge-out output does not combine with the main mosaic. My mux caching is --sout-mux-caching 250480.
Previous versions of vlc would complain that 8000 was not a valid sample rate for mp4a which is why i was upsampling. So maybe even though it's producing an audio file out the one chain the muxer knows better and is rejecting the bridge-in b/c the sample rate is too low.
[0xab73038] [Media: audio_1] main mux warning: late buffer for mux input (141913)[0xb752aed0] [Media: camera1] main input debug: Buffering 1%[0x9adba28] [Media: record_session] main mux warning: late buffer for mux input (478027)[0xb7505208] [Media: record_session] stream_out_duplicate stream out debug: duplicated a new stream codec=mp4a (es=8292 group=0)[0x9adba28] [Media: record_session] main mux error: cannot add a new stream (unsupported while muxing to this format). You can try increasing sout-mux-caching value
I just wanted to add that the "unsupported while muxing" error is only on the vcodec=h264. Changing to mp4v works, and results in a file with a sample rate of 16000 ( according to the media information, did it upsample anyway to some default value? ). Of course since we're saving two videos to a large canvas we can't use mp4v b/c it can't multithread and we simply end up losing alot of frames while the one core of the cpu maxes out.
In doing some more testing I found that oversimplifying the audio transcoding does not cause any errors but does cause no audio. The string below will create an audio stream on my ts file without any errors. The audio wave will be completely and perfectly flat.
Since some more checks were added to the audio resamplers maybe they can be expanded a bit to catch the absence of this variable which leads to no audio.